--- a/project/frontend/css/styles.css
+++ b/project/frontend/css/styles.css
@@ -297,14 +297,14 @@ body {
   color: var(--clr-bg-title);
   background-color: var(--clr-text);
   border: var(--bs-md) solid var(--clr-bg-title);
-  margin: var(--mg-lg);
+  margin: var(--mg-lg) 0;
   border-radius: var(--bs-xl);
 }
 .btn-danger {
   color: var(--clr-text);
   background-color: var(--clr-red);
   border: var(--bs-md) solid var(--clr-text);
-  margin: var(--mg-lg);
+  margin: var(--mg-lg) 0;
   border-radius: var(--bs-xl);
 }
 
@@ -364,17 +364,17 @@ body {
   border-radius: 15px;
 }
 .popup-header-icon img {
- width: min(150px, max(calc(150px * 0.15) + calc(150vw * 0.038), calc(150px * 0.15) + calc(150vh * 0.038)));
+  width: min(150px, max(calc(150px * 0.15) + calc(150vw * 0.038), calc(150px * 0.15) + calc(150vh * 0.038)));
 }
 .popup-body p {
   text-align: center;
   text-wrap: pretty;
   margin: var(--mg-lg);
 }
-.popup-footer button {
+/* .popup-footer button {
   font-size: var(--fs-xl);
   padding: var(--pd-md) var(--mg-xl);
-}
+} */
 
 /* @media screen and (orientation:portrait) {
   body {
