--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -1,5 +1,7 @@
+<link rel="stylesheet" href="css/gamePong.css">
+
 <style>
-	.game-home-btn {
+	#game-home-btn {
 		position: absolute;
 		top: 0;
 		right: 0;
@@ -8,13 +10,26 @@
 	}
 </style>
 
-<div class="game-home-btn">
+<div id="game-home-btn">
 	<a class="m-0 p-0" href="/">
 		<img class="ic-xl btn-hover p-0 mt-0 me-0" src="../static/svg/home.svg" alt="Home button">
 	</a>
 </div>
 
 <div class="d-flex justify-content-center align-items-center h-100" id="game-page">
+
+	<!-- game UI -->
+	<div id="game-block" class="d-flex justify-content-around">
+		<div id="btn-player1" class="btn-block"></div>
+		<canvas id="gameArea" width="1024" height="600"></canvas>
+		<div id="btn-player2" class="btn-block"></div>
+		<!-- <script type="module" src="../js/gameUI/utils.js"></script>
+		<script type="module" src="../js/gameUI/main-menu.js"></script>
+		<script type="module" src="../js/gameUI/tournament-board.js"></script>
+		<script type="module" src="../js/gameUI/players-board.js"></script>
+		<script type="module" src="../js/gameUI/online-menu.js"></script>
+		<script type="module" src="../js/gameUI/online-board.js"></script> -->
+	</div>
 
 	<!-- popup for creating a room -->
 	<div class="modal fade" id="createRoomModal" tabindex="-1" role="dialog" aria-labelledby="createRoomModalLabel" aria-hidden="true">
@@ -40,14 +55,29 @@
 		</div>
 	</div>	
 
-	<!-- game UI -->
-	<div>
-		<canvas id="gameArea" width="1024" height="600"></canvas>
-		<script type="module" src="../js/gameUI/utils.js"></script>
-		<script type="module" src="../js/gameUI/main-menu.js"></script>
-		<script type="module" src="../js/gameUI/tournament-board.js"></script>
-		<script type="module" src="../js/gameUI/players-board.js"></script>
-		<script type="module" src="../js/gameUI/online-menu.js"></script>
-		<script type="module" src="../js/gameUI/online-board.js"></script>
+	<!-- Modal Winner Contact -->
+	<div class="modal fade" id="winnerOfflineModal" tabindex="-1">
+		<div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+			<div class="modal-content popup-content">
+				<div class="modal-body">
+					<div class="popup-frame">
+						<div class="popup-header-icon">
+							<h1 class="font-bs fs-xl" style="color: #fff;" data-i18n="winner">the winner</h1>
+						</div>
+						<div class="d-flex justify-content-center popup-body">
+							<p id="winnerName" class="font-bs-bold fs-xxl" style="color: #629DD2;"></p>
+						</div>
+						<div class="d-flex justify-content-around popup-footer w-100">
+							<a class="m-0 p-0" href="/">
+								<button type="button" class="font-bs fs-lg btn btn-secondary flex-shrink-1 p-2 mx-2"
+									data-i18n="back_to_home" data-bs-dismiss="modal">back to home</button>
+							</a>
+							<button type="button" id="restart" class="font-bs fs-lg btn btn-primary p-2 mx-2"
+								data-i18n="play_again" data-bs-dismiss="modal">play agian</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
