--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -73,7 +73,7 @@
 									data-i18n="back_to_home" data-bs-dismiss="modal">back to home</button>
 							</a>
 							<button type="button" id="restart" class="font-bs fs-lg btn btn-primary p-2 mx-2"
-								data-i18n="play_again" data-bs-dismiss="modal">play agian</button>
+								data-i18n="play_again">play agian</button>
 						</div>
 					</div>
 				</div>
