--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -9,11 +9,14 @@
 	<!-- icon menu -->
 	<div class="icon-menu-container">
 		<img class="icon-menu ic-xl btn-hover" data-bs-toggle="modal" data-bs-target="#notificationModal"
-		  src="../static/svg/notification.svg" alt="notification button"
+			src="../static/svg/notification.svg" alt="notification button"
 		>
-        <a class="m-0 p-0" href="/">
-          <img class="icon-menu ic-xl btn-hover p-0 mt-0 me-0" src="../static/svg/home.svg" alt="Home button">
-        </a>
+		<a class="m-0 p-0" href="/">
+			<img class="icon-menu ic-xl btn-hover p-0 mt-0" src="../static/svg/home.svg" alt="Home button">
+		</a>
+		<a class="m-0 p-0" href="/profile">
+			<img class="icon-menu ic-xl btn-hover p-0 mt-0" src="../static/svg/Sign-out.svg" alt="back button">
+		</a>
 	</div>
 
 	<h1 class="h-lg">MATCH HISTORY</h1>
