--- a/project/frontend/css/modals.css
+++ b/project/frontend/css/modals.css
@@ -88,7 +88,7 @@
   aspect-ratio: 1 / 1;
 }
 
-.profile-image img {
+.profile-image > img {
   border: var(--bs-md) solid var(--clr-border);
   border-radius: 50%;
   width: 100%;
