--- a/project/frontend/templates/main.html
+++ b/project/frontend/templates/main.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="../css/main.css">
 
+<button id="gameoffline" class="btn-lg fs-xxl">game</button> <!-- DEBUG -->
 <nav class="d-flex align-items-center justify-content-between main-header">
   <div class="d-flex align-items-center box-profile" id="blockProfile">
     <div class="profile-frame">
