--- a/project/frontend/css/gamePong.css
+++ b/project/frontend/css/gamePong.css
@@ -2,6 +2,14 @@ p {
   margin: 0;
 }
 
+#game-home-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: var(--mg-xl);
+  margin-right: var(--mg-xl);
+}
+
 /* canvas {
   width: 70%;
   object-fit: contain;
@@ -35,6 +43,6 @@ p {
   border-radius: min(20px, 10px + 4vw);
 }
 
-.modal-content {
+/* .modal-content {
   width: 150%;
-}
+} */
