--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -1,13 +1,6 @@
 <link rel="stylesheet" href="css/gamePong.css">
 
 <style>
-	#game-home-btn {
-		position: absolute;
-		top: 0;
-		right: 0;
-		margin-top: var(--mg-md);
-		margin-right: var(--mg-md);
-	}
 </style>
 
 <div id="game-home-btn">
@@ -33,8 +26,8 @@
 
 	<!-- popup for creating a room -->
 	<div class="modal fade" id="createRoomModal" tabindex="-1" role="dialog" aria-labelledby="createRoomModalLabel" aria-hidden="true">
-		<div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
-			<div class="modal-content">
+		<div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered container-fluid">
+			<div class="modal-content w-100">
 				<div class="modal-header d-flex justify-content-center">
 					<h5 class="modal-title fs-1 font-irish" id="createRoomModalLabel"
 						data-i18n="create_room">CREATE ROOM</h5>
@@ -44,7 +37,7 @@
 						<div class="mb-3 d-flex flex-column align-items-center">
 							<label for="room-name-input" class="form-label font-irish fs-3"
 								data-i18n="room_name">Room Name</label>
-							<input class="form-control fs-5 w-90" id="room-name-input" type="text"
+							<input class="form-control fs-5 w-100" id="room-name-input" type="text"
 								placeholder="Enter your room name" name="room-name" required>
 						</div>
 					</form>
@@ -60,16 +53,14 @@
 	</div>	
 
 	<!-- Modal Winner Contact -->
-	<div class="modal fade" id="winnerOfflineModal" tabindex="-1">
+	<div class="modal fade" id="winnerOfflineModal" tabindex="-1" data-bs-backdrop="static">
 		<div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
 			<div class="modal-content popup-content">
 				<div class="modal-body">
 					<div class="popup-frame">
-						<div class="popup-header-icon">
-							<h1 class="font-bs fs-xl" style="color: #fff;" data-i18n="winner">the winner</h1>
-						</div>
-						<div class="d-flex justify-content-center popup-body">
-							<p id="winnerName" class="font-bs-bold fs-xxl" style="color: #629DD2;"></p>
+						<h1 class="font-bs fs-xxl m-2" style="color: #fff;" data-i18n="winner">the winner</h1>
+						<div class="d-flex justify-content-center popup-body m-3">
+							<p id="winnerName" class="font-bs-bold h-md" style="color: #629DD2;"></p>
 						</div>
 						<div class="d-flex justify-content-around popup-footer w-100">
 							<a class="m-0 p-0" href="/">
