--- a/project/frontend/css/modals.css
+++ b/project/frontend/css/modals.css
@@ -4,8 +4,8 @@
   border-radius: 15px;
   display: grid;
   grid-template-rows: 1fr 6fr auto;
-  min-width: min(800px, max(calc(800px * 0.15) + calc(800vw * 0.038), calc(800px * 0.15) + calc(800vh * 0.038)));
-  height: min(800px, max(calc(800px * 0.15) + calc(800vw * 0.038), calc(800px * 0.15) + calc(800vh * 0.038)));
+  /* min-width: min(800px, max(calc(800px * 0.15) + calc(800vw * 0.038), calc(800px * 0.15) + calc(800vh * 0.038)));
+  height: min(800px, max(calc(800px * 0.15) + calc(800vw * 0.038), calc(800px * 0.15) + calc(800vh * 0.038))); */
 }
 
 .bk-noti-title {
