--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -25,7 +25,7 @@
 	</div>
 
 	<!-- popup for creating a room -->
-	<div class="modal fade" id="createRoomModal" tabindex="-1" role="dialog" aria-labelledby="createRoomModalLabel" aria-hidden="true">
+	<div class="modal fade" id="createRoomModal" tabindex="-1" role="dialog" aria-labelledby="createRoomModalLabel" aria-hidden="true" data-bs-backdrop="static">
 		<div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered container-fluid">
 			<div class="modal-content w-100">
 				<div class="modal-header d-flex justify-content-center">
