--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -33,14 +33,12 @@
 						data-i18n="create_room">CREATE ROOM</h5>
 				</div>
 				<div class="modal-body d-flex w-100">
-					<form id="room-form" class="w-100" action="#" method="post">
-						<div class="mb-3 d-flex flex-column align-items-center">
-							<label for="room-name-input" class="form-label font-irish fs-3"
-								data-i18n="room_name">Room Name</label>
-							<input class="form-control fs-5 w-100" id="room-name-input" type="text"
-								placeholder="Enter your room name" name="room-name" required>
-						</div>
-					</form>
+					<div class="mb-3 d-flex flex-column align-items-center w-100">
+						<label for="room-name-input" class="form-label font-irish fs-3"
+							data-i18n="room_name">Room Name</label>
+						<input class="form-control fs-5 w-100" id="room-name-input" type="text"
+							placeholder="Enter your room name" name="room-name" required>
+					</div>
 				</div>
 				<div class="modal-footer d-flex justify-content-around">
 					<button type="submit" class="btn btn-primary font-bs-bold col-4 mb-0" id="createRoomBtn"
