ADD: check noti in front-end

--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -8,7 +8,7 @@
 <body>
 	<!-- icon menu -->
 	<div class="icon-menu-container">
-		<img class="icon-menu ic-xl btn-hover" data-bs-toggle="modal" data-bs-target="#notificationModal"
+		<img id="notiBtn" class="icon-menu ic-xl btn-hover" data-bs-toggle="modal" data-bs-target="#notificationModal"
 			src="../static/svg/notification.svg" alt="notification button"
 		>
 		<a class="m-0 p-0" href="/">
