--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -55,7 +55,7 @@
     <div class="bk-friend">
       <div class="d-flex align-items-start justify-content-end bk-friend-title">
         <!-- popup notification -->
-        <img class="ic-xl btn-hover"  data-bs-toggle="modal" data-bs-target="#notificationModal"
+        <img id="notiBtn" class="ic-xl btn-hover"  data-bs-toggle="modal" data-bs-target="#notificationModal"
           src="../static/svg/notification.svg" alt="notification button"
         >
         <a class="m-0 p-0" href="/">
