--- a/project/frontend/css/leaderboard.css
+++ b/project/frontend/css/leaderboard.css
@@ -1,11 +1,29 @@
 .bk-main {
   display: grid;
   grid-template-rows: 2fr 3fr auto;
-  min-width: min(800px, max(calc(800px * 0.15) + calc(800vw * 0.038), calc(800px * 0.15) + calc(800vh * 0.038)));
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .bk-leader {
   margin: 0 var(--mg-lg);
+}
+
+.bk-table {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.bk-table-list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
 }
 
 .bk-picture-title {
@@ -61,36 +79,50 @@
 	background-color: #0946A6;
 	border: var(--bs-md) solid var(--clr-grey);
 	border-radius: min(5px, calc(5px * 0.20) + calc(5vw * 0.038));
-  margin-bottom: var(--mg-xl);
   padding: var(--bs-md) 0;
 }
 
-.player-item {
-	background-color: #A2B1B5;
+.player-list-item {
+  position: relative;
+  margin: var(--bs-lg) 0;
+  padding: var(--bs-md) 0;
+}
+
+.player-item-background {
+  z-index: -2;
+  position: absolute;
+  width: 100%;
+  height: 60%;
+  transform: translateY(-50%);
+  top: 50%;
+  border: var(--bs-md) solid var(--clr-border);
+  background-color: var(--clr-text);
+	border-radius: var(--bs-xl);
+}
+
+.player-item-picture {
+  display: flex;
+  justify-content: center;
+}
+.player-item-picture img {
+	border: var(--bs-md) solid var(--clr-border);
+	border-radius: 50%;
+	width: min(85px, max(calc(85px * 0.15) + calc(85vw * 0.038), calc(85px * 0.15) + calc(85vh * 0.038)));
+	aspect-ratio: 1 / 1;
+}
+.player-img {
+	position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.player-item-content {
 	font-family: 'Orbitron', 'system ui';
 	font-size: var(--fs-xl);
 	font-weight: bold;
 	color: #0946A6;
-	border: var(--bs-md) solid #629DD2;
-	border-radius: min(5px, calc(5px * 0.20) + calc(5vw * 0.038));
-  margin-bottom: var(--mg-xxl);
-  padding: var(--bs-md) 0;
-}
-
-.row > div {
-  margin: var(--mg-sm);
   display: flex;
+  align-items: center;
   justify-content: center;
-}
-
-.player-img {
-	border: var(--bs-md) solid var(--clr-border);
-	border-radius: 50%;
-	width: min(75px, max(calc(75px * 0.15) + calc(75vw * 0.038), calc(75px * 0.15) + calc(75vh * 0.038)));
-	aspect-ratio: 1 / 1;
-	position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
 }
 
 /* .profile-img-overlay {
