Update: HTML history

--- a/project/frontend/templates/leaderboard.html
+++ b/project/frontend/templates/leaderboard.html
@@ -54,7 +54,7 @@
   <!-- table -->
   <div class="bk-table">
     <!-- table headline -->
-    <div class="headline container-fluid ">
+    <div class="table-headline container-fluid ">
       <div class="row d-flex m-0">
         <div class="col-2">
           <p data-i18n="rank">rank</p>
@@ -76,7 +76,7 @@
 
     <!-- table data -->
     <div class="bk-table">
-      <ol id="player-list" class="d-flex flex-column align-items-center w-100 my-0 p-0 pt-3 overflow-auto scroll-custom"> </ol>
+      <ol id="player-list" class="overflow-auto scroll-custom player-list"> </ol>
     </div>
   </div>
 </div>
