--- a/project/frontend/css/match-history.css
+++ b/project/frontend/css/match-history.css
@@ -1,15 +1,15 @@
-h1 {
+.title {
 	font-family: 'Press Start 2P', 'system-ui';
 	color: white;
-	margin: 50px;
+	margin: var(--mg-lg);
+	padding: var(--fs-lg) var(--fs-xl);
 	text-align: center;
 	-webkit-text-stroke: var(--fs-h1-stk) var(--clr-shadow);
 	paint-order: stroke fill;
 
 	/* adding border style */
 	border: var(--bs-md) solid var(--clr-border);
-	border-radius: min(50px, calc(50px * 0.20) + calc(50vw * 0.038));
-	padding: 2.5rem;
+	border-radius: calc(var(--fs-xxl) * 1.2);
 	display: block;
 	width: fit-content;
 	max-width: 90%;
@@ -17,73 +17,65 @@ h1 {
 	margin-right: auto;
 }
 
-.row {
-	/* border */
-	min-height: 60px;
-	border: var(--bs-md) solid var(--clr-grey);
-	border-radius: min(5px, calc(5px * 0.20) + calc(5vw * 0.038));
-	margin-bottom: 60px;
-}
-
-#headline {
+.table-headline {
 	font-family: 'Orbitron', 'system ui';
-	/* font-size: 35px; */
 	font-size: var(--fs-xxl);
 	font-weight: bold;
 	color: #A2B1B5;
 	text-align: center;
 	background-color: #0946A6;
-}
 
-#match-history-table {
-	font-family: 'Orbitron', 'system ui';
-	/* font-size: 25px; */
-	font-size: var(--fs-xl);
-	font-weight: bold;
-	color: #0946A6;
-	text-align: center;
-}
-
-#match-history-table .row {
-	background-color: #A2B1B5;
-	border: var(--bs-md) solid var(--clr-border);
+	border: var(--bs-md) solid var(--clr-grey);
 	border-radius: min(5px, calc(5px * 0.20) + calc(5vw * 0.038));
+  padding: var(--bs-md) 0;
+	width: 100%;
+}
+.row {
+	width: 100%;
+	margin: 0;
 }
 
-.wrapper {
-	text-align: center;
+.table-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  padding-top: var(--mg-md);
 }
-
-.button {
-	position: absolute;
-	top: 50%;
+.table-list-item {
+  position: relative;
+  margin: var(--bs-lg) 0;
+  padding: var(--bs-md) 0;
 }
-
-.player-img {
+.table-item-background {
+  z-index: -2;
+  position: absolute;
+  width: 100%;
+  height: 60%;
+  transform: translateY(-50%);
+  top: 50%;
+  border: var(--bs-md) solid var(--clr-border);
+  background-color: var(--clr-text);
+	border-radius: var(--bs-xl);
+}
+.player-item-picture {
+  display: flex;
+  justify-content: center;
+}
+.player-item-picture img {
 	border: var(--bs-md) solid var(--clr-border);
 	border-radius: 50%;
 	width: min(100px, max(calc(100px * 0.15) + calc(100vw * 0.038), calc(100px * 0.15) + calc(100vh * 0.038)));
 	aspect-ratio: 1 / 1;
 }
-
-.profile-img-overlay {
-	position: absolute;
-    display: flex;
-	/* right: 30px; */
-    justify-content: center;
-    align-items: center;
-}
-
-#my-profile {
-	position: relative;
-	display: flex;
-	justify-content: end;
-	align-items: center;
-}
-
-#friend-profile {
-	position: relative;
-	display: flex;
-	justify-content: end;
-	align-items: center;
+.player-item-content {
+	font-family: 'Orbitron', 'system ui';
+	font-size: var(--fs-xl);
+	font-weight: bold;
+	color: #0946A6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
