--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -43,10 +43,10 @@
       </div>
       <div class="d-flex justify-content-evenly">
         <a href="/history">
-          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="match_history">MATCH HISTORY &gt;&gt;</button>
+          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="match_history_btn">MATCH HISTORY &gt;&gt;</button>
         </a>
         <a href="/leaderboard">
-          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="leaderboard">LEADERBOARD &gt;&gt;</button>
+          <button class="font-bs-bold btn btn-primary bk-profile-button fs-lg" data-i18n="leaderboard_btn">LEADERBOARD &gt;&gt;</button>
         </a>
       </div>
       <div class="d-flex justify-content-evenly align-item">
