Update: fetch history API

--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -34,23 +34,7 @@
 	</div>
 
 	<!-- table body -->
-	<div id="match-history-table" class="container-fluid flex-grow-1 table-list overflow-auto scroll-custom">
-
-	<li class="row table-list-item">
-		<div id="my-profile" class="col-1 player-item-picture">
-			<img id=profileImage alt="profile-picture">
-		</div>
-		<div class="col-2 player-item-content">player_name</div>
-		<div class="col player-item-content">0 : 0</div>
-		<div id="friend-profile" class="col-1 player-item-picture">
-			<img id="friendProfileImage" alt="profile-picture">
-		</div>
-		<div class="col-2 player-item-content">player2_name</div>
-		<div class="col-3 player-item-content">11/07/2024</div>
- 		<div class="table-item-background"></div>
-	</li>
-
-	</div>
+	<div id="match-history-table" class="container-fluid flex-grow-1 table-list overflow-auto scroll-custom"></div>
 
 	<!-- button -->
 	<div class="text-center">
