--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="../css/editProfile.css">
+<link rel="stylesheet" href="../css/2fa.css">
 
 <div class="main-block">
   <div class="d-flex flex-grow-1 justify-content-center align-items-center position-relative">
@@ -67,12 +68,52 @@
             <button type="button" class="font-bs-bold btn btn-secondary edit-btn"
               data-i18n="back">Back</button>
           </a>
-          <!-- <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-bs-dismiss="modal"
-            data-i18n="save">Save</button> -->
-          <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-i18n="save">Save</button>
+          <button type="button" class="font-bs-bold btn btn-primary edit-btn" data-bs-toggle="modal"
+            data-bs-target="#2FA" data-i18n="save">Save</button>
+          <!-- <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-i18n="save">Save</button> -->
         </div>
       </div>
     </div>
 
   </form>
+</div>
+
+<!-- Modal 2FA -->
+<div class="modal fade" id="2FA" tabindex="-1">
+  <div class="modal-dialog my-0 d-flex justify-content-center modal-dialog-centered">
+    <div class="modal-content popup-content">
+      <div class="modal-body p-0">
+        <div class="popup-2FA">
+          <p data-bs-dismiss="modal" class="font-bs-bold fs-md go-back">&lt; Go back and edit</p>
+          <div class="d-flex flex-column align-items-center">
+            <div class="popup-header-icon">
+              <img src="../static/svg/email-blue.svg" alt="alert picture">
+            </div>
+            <div class="d-flex justify-content-center">
+              <h1 class="font-bs-bold fs-xl header-2fa" style="color: #629DD2;">Enable two-factor authentication</h1>
+            </div>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="font-bs fs-md body-2fa" style="color: #ffffff;">
+              We have sent a verification code to Wink_Warrior@42mail.com. Please enter it here.
+            </p>
+            <div class="d-flex justify-content-between">
+              <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
+              <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
+              <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
+              <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
+              <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
+              <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
+            </div>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <button type="button" class="font-bs-bold fs-lg btn btn-primary m-2"
+              >Continue</button>
+            <button type="button" class="font-bs-bold fs-lg btn btn-primary m-2"
+              >Resend code</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
