ADD: 2fa input behavior

--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -68,9 +68,8 @@
             <button type="button" class="font-bs-bold btn btn-secondary edit-btn"
               data-i18n="back">Back</button>
           </a>
-          <button type="button" class="font-bs-bold btn btn-primary edit-btn" data-bs-toggle="modal"
+          <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-bs-toggle="modal"
             data-bs-target="#2FA" data-i18n="save">Save</button>
-          <!-- <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-i18n="save">Save</button> -->
         </div>
       </div>
     </div>
@@ -84,19 +83,21 @@
     <div class="modal-content popup-content">
       <div class="modal-body p-0">
         <div class="popup-2FA">
-          <p data-bs-dismiss="modal" class="font-bs-bold fs-md go-back">&lt; Go back and edit</p>
+          <p data-bs-dismiss="modal" class="font-bs-bold fs-md go-back" data-i18n="go_back_and_edit">&lt; Go back and edit</p>
           <div class="d-flex flex-column align-items-center">
             <div class="popup-header-icon">
               <img src="../static/svg/email-blue.svg" alt="alert picture">
             </div>
             <div class="d-flex justify-content-center">
-              <h1 class="font-bs-bold fs-xl header-2fa" style="color: #629DD2;">Enable two-factor authentication</h1>
+              <h1 class="font-bs-bold fs-xl header-2fa" style="color: #629DD2;" data-i18n="2fa_authen_header">Enable two-factor authentication</h1>
             </div>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="font-bs fs-md body-2fa" style="color: #ffffff;">
-              We have sent a verification code to Wink_Warrior@42mail.com. Please enter it here.
-            </p>
+            <div class="font-bs fs-md body-2fa" style="color: #ffffff;">
+              <p data-i18n="2fa_authen_body1">We have sent a verification code to </p>
+              <p id="2fa-email"></p>
+              <p data-i18n="2fa_authen_body2"> Please enter it here.</p>
+            </div>
             <div class="d-flex justify-content-between">
               <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
               <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
@@ -108,9 +109,9 @@
           </div>
           <div class="d-flex flex-column align-items-center">
             <button type="button" class="font-bs-bold fs-lg btn btn-primary m-2"
-              >Continue</button>
+              id="edit-continue" data-i18n="continue">Continue</button>
             <button type="button" class="font-bs-bold fs-lg btn btn-primary m-2"
-              >Resend code</button>
+              id="edit-resend-code" data-i18n="resend_code">Resend code</button>
           </div>
         </div>
       </div>
