Fixed Edit Profile without 2FA

--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -68,8 +68,10 @@
             <button type="button" class="font-bs-bold btn btn-secondary edit-btn"
               data-i18n="back">Back</button>
           </a>
-          <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-bs-toggle="modal"
-            data-bs-target="#2FA" data-i18n="save">Save</button>
+          <button type="submit" class="font-bs-bold btn btn-primary edit-btn"
+            data-i18n="save">Save</button>
+          <!-- <button type="submit" class="font-bs-bold btn btn-primary edit-btn" data-bs-toggle="modal"
+            data-bs-target="#2FA" data-i18n="save">Save</button> -->
         </div>
       </div>
     </div>
