Add friend icon

--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -54,9 +54,10 @@
     </div>
     <div class="bk-friend">
       <div class="d-flex align-items-start justify-content-end bk-friend-title">
-        <!-- popup notification -->
+        <img id="notiMsgBtn" class="icon-menu ic-xl btn-hover" data-bs-toggle="modal" data-bs-target="#notiMsgModal"
+          src="../static/svg/noti-msg.svg" alt="notification Message button">
         <img id="notiBtn" class="ic-xl btn-hover"  data-bs-toggle="modal" data-bs-target="#notificationModal"
-          src="../static/svg/notification.svg" alt="notification button"
+          src="../static/svg/noti-friend.svg" alt="notification button"
         >
         <a class="m-0 p-0" href="/">
           <img class="ic-xl btn-hover p-0 mt-0 me-0" src="../static/svg/home.svg" alt="Home button">
