--- a/project/frontend/templates/match-history.html
+++ b/project/frontend/templates/match-history.html
@@ -4,7 +4,7 @@
 	<!-- icon menu -->
 	<div class="icon-menu-container">
 		<img id="notiBtn" class="icon-menu ic-xl btn-hover" data-bs-toggle="modal" data-bs-target="#notificationModal"
-			src="../static/svg/notification.svg" alt="notification button">
+			src="../static/svg/noti-friend.svg" alt="notification button">
 		<a class="m-0 p-0" href="/">
 			<img class="icon-menu ic-xl btn-hover p-0 mt-0" src="../static/svg/home.svg" alt="Home button">
 		</a>
