ADD: open chat icon

--- a/project/frontend/templates/profile.html
+++ b/project/frontend/templates/profile.html
@@ -54,6 +54,7 @@
     </div>
     <div class="bk-friend">
       <div class="d-flex align-items-start justify-content-end bk-friend-title">
+        <!-- TODO dont forget to add event -->
         <img id="notiMsgBtn" class="icon-menu ic-xl btn-hover" data-bs-toggle="modal" data-bs-target="#notiMsgModal"
           src="../static/svg/noti-msg.svg" alt="notification Message button">
         <img id="notiBtn" class="ic-xl btn-hover"  data-bs-toggle="modal" data-bs-target="#notificationModal"
