--- a/project/frontend/css/profile.css
+++ b/project/frontend/css/profile.css
@@ -37,7 +37,7 @@
 .friend-list-item {
   display: grid;
   position: relative;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 2fr 5fr 1fr;
   width: 85%;
   margin: var(--mg-md);
 }
