--- a/project/frontend/css/modals.css
+++ b/project/frontend/css/modals.css
@@ -115,3 +115,37 @@ p {
 /* .modal-custom-width {
   min-width: 400px;
 } */
+
+.modal-content-chat {
+  box-shadow: 0 0 20px var(--clr-shadow);
+  border: var(--bs-lg) solid var(--clr-border);
+  border-radius: var(--bs-xl);
+  padding: 0;
+  width: 100%;
+  height: 70%;
+}
+.chat-title-bar {
+  width: 100%;
+  background-color: var(--clr-text);
+  border-radius: var(--bs-md);
+	font-family: 'Orbitron', 'system ui';
+	font-size: var(--fs-xl);
+	font-weight: bold;
+	color: #0946A6;
+
+  display: flex;
+  padding: var(--bs-xl);
+}
+.chat-box {
+  border-top: var(--bs-md) solid var(--clr-border);
+}
+.chat-typing-area {
+  border: var(--bs-md) solid var(--clr-border);
+  border-radius: var(--bs-xl);
+	font-family: 'Orbitron', 'system ui';
+	font-size: var(--fs-lg);
+	font-weight: bold;
+	color: #fff;
+  margin: var(--mg-lg);
+  padding: var(--bs-xl);
+}
