--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -61,9 +61,9 @@
 							<p id="winnerName" class="font-bs-bold h-md" style="color: #629DD2;"></p>
 						</div>
 						<div class="d-flex justify-content-around popup-footer w-100">
-							<a class="m-0 p-0" href="/">
+							<a id="redirectPage" class="m-0 p-0" href="/game">
 								<button type="button" class="font-bs fs-lg btn btn-secondary flex-shrink-1 p-2 mx-2"
-									data-i18n="back_to_home" data-bs-dismiss="modal">back to home</button>
+									data-i18n="back_to_game_menu" data-bs-dismiss="modal">back to game menu</button>
 							</a>
 							<button type="button" id="restart" class="font-bs fs-lg btn btn-primary p-2 mx-2"
 								data-i18n="play_again">play agian</button>
