Fixed: Password must have at least 4 char

--- a/project/frontend/templates/signup.html
+++ b/project/frontend/templates/signup.html
@@ -42,6 +42,7 @@
     </div>
     <div id="password2-error" class="align-self-start font-bs ms-3 p-0 text-start">
       <p class="text-error" data-i18n="error_confirm_password"></p>
+      <p class="text-error" data-i18n="error_password_invalid"></p>
       <p class="text-error" data-i18n="error_server"></p>
     </div>
     <div class="d-flex align-items-center from-check mt-3">
