--- a/project/frontend/templates/test/index.html
+++ b/project/frontend/templates/test/index.html
@@ -14,14 +14,14 @@
 			<div class="modal-content popup-content">
 				<div class="modal-body">
 					<div class="popup-frame">
-						<h1 class="font-bs fs-xxl m-2" style="color: #fff;" data-i18n="winner">the winner</h1>
+						<h1 class="font-bs fs-xxl m-2 text-nowrap" style="color: #fff;" data-i18n="winner">the winner</h1>
 						<div class="d-flex justify-content-center popup-body m-3">
 							<p id="winnerName" class="font-bs-bold h-md" style="color: #629DD2;"></p>
 						</div>
 						<div class="d-flex justify-content-around popup-footer w-100">
 							<a id="redirectPage" class="m-0 p-0" href="/game">
-								<button type="button" class="font-bs fs-lg btn btn-secondary flex-shrink-1 p-2 mx-2"
-									data-i18n="back_to_game_menu" data-bs-dismiss="modal">back to game menu</button>
+								<button id="modalBackBtn" type="button" class="font-bs fs-lg btn btn-secondary flex-shrink-1 p-2 mx-2"
+									data-i18n="continue" data-bs-dismiss="modal">continue</button>
 							</a>
 						</div>
 					</div>
