Update: adjust layout of html

--- a/project/frontend/templates/login.html
+++ b/project/frontend/templates/login.html
@@ -7,7 +7,7 @@
   </h2>
 </div>
 <form id="login-form" action="#" method="post">
-  <div class="container col-xxl-4 col-xl-5 col-sm-5 d-flex flex-column">
+  <div class="container col-xxl-4 col-xl-5 col-sm-6 d-flex flex-column">
     <div class="block-login-input">
       <img class="ic-xl" src="../static/svg/username.svg" alt="user image">
       <input type="text" class="border border-0 text-center font-bs-bold input-login-custom login-input"
@@ -31,12 +31,8 @@
       <label class="form-check-label font-bs-bold ms-2 checkbox-label-lg" for="remember-me">Remember Me</label>
     </div>
     <div class="d-flex rows block-login">
-      <button type="submit" class="font-bs-bold btn btn-primary col fs-xl">Login</button>
-      <a href="#" class="font-bs-bold btn btn-primary col fs-xl">Login with 42</a>
-    </div>
-    <div class="d-flex">
-      <a href="/signup" class="flex-grow-1 font-bs-bold btn btn-primary fs-xl">New user? Create
-        account</a>
+      <button type="submit" class="font-bs-bold btn btn-primary col fs-lg">Login</button>
+      <a href="/signup" class="font-bs-bold btn btn-primary col fs-lg">Create account</a>
     </div>
   </div>
 </form>
