--- a/project/frontend/templates/signup.html
+++ b/project/frontend/templates/signup.html
@@ -45,12 +45,12 @@
       <p class="text-error" data-i18n="error_password_invalid"></p>
       <p class="text-error" data-i18n="error_server"></p>
     </div>
-    <div class="d-flex align-items-center from-check mt-3">
+    <!-- <div class="d-flex align-items-center from-check mt-3">
       <input type="checkbox" class="form-check-input checkbox-lg" id="remember-me">
       <label class="form-check-label font-bs-bold ms-2 checkbox-label-lg" for="remember-me">
         I Agree with <span style="color: #B63A3A;">privacy</span> and <span style="color: #B63A3A;">policy</span>
       </label>
-    </div>
+    </div> -->
     <div class="d-flex align-self-stretch">
       <button type="submit" class="flex-grow-1 font-bs-bold btn btn-primary fs-xl">Create account</button>
     </div>
