Update: Create popup display winner tournament

--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -18,7 +18,7 @@
 			<div class="modal-content popup-content">
 				<div class="modal-body">
 					<div class="popup-frame">
-						<h1 class="font-bs fs-xxl m-2" style="color: #fff;" data-i18n="winner">the winner</h1>
+						<h1 class="font-bs text-center fs-xxl m-2" style="color: #fff;" data-i18n="winner">the winner</h1>
 						<div class="d-flex justify-content-center popup-body m-3">
 							<p id="winnerName" class="font-bs-bold h-md" style="color: #629DD2;"></p>
 						</div>
@@ -45,7 +45,7 @@
             <div class="popup-header-icon">
               <img src="../static/svg/alert.svg" alt="alert picture">
             </div>
-            <h2 class="font-bs-bold fs-xl" style="color: #B63A3A;" data-i18n="confirm_exit">CONFIRM EXIT</h2>
+            <h2 class="font-bs-bold text-center fs-xl" style="color: #B63A3A;" data-i18n="confirm_exit">CONFIRM EXIT</h2>
             <div class="d-flex justify-content-center popup-body">
               <p class="font-bs fs-lg" style="color: #ffffff;" data-i18n="confirm_exit_content">
                 Are you sure you want to exit from game ?
