--- a/project/frontend/css/styles.css
+++ b/project/frontend/css/styles.css
@@ -428,3 +428,18 @@ body {
 .scroll-custom::-webkit-scrollbar-thumb:hover {
   background: var(--clr-shadow); 
 }
+
+.crownTour > img {
+  width: min(100px, max(calc(100px * 0.15) + calc(100vw * 0.038), calc(100px * 0.15) + calc(100vh * 0.038)));
+}
+.bk-ribbonTour {
+  display: flex;
+  position: relative;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.bk-ribbonTour > p {
+  white-space: nowrap;
+  z-index: 100;
+}
