Fixed: Firefox browser not support

--- a/project/frontend/templates/editProfile.html
+++ b/project/frontend/templates/editProfile.html
@@ -91,14 +91,14 @@
               <img src="../static/svg/email-blue.svg" alt="alert picture">
             </div>
             <div class="d-flex justify-content-center">
-              <h1 class="font-bs-bold fs-xl header-2fa" style="color: #629DD2;" data-i18n="2fa_authen_header">Enable two-factor authentication</h1>
+              <h1 class="font-bs-bold fs-xl header-2fa" style="color: #629DD2;" data-i18n="authen_2fa_header">Enable two-factor authentication</h1>
             </div>
           </div>
           <div class="d-flex flex-column align-items-center">
             <div class="font-bs fs-md body-2fa" style="color: #ffffff;">
-              <p data-i18n="2fa_authen_body1">We have sent a verification code to </p>
+              <p data-i18n="authen_2fa_body1">We have sent a verification code to </p>
               <p id="2fa-email"></p>
-              <p data-i18n="2fa_authen_body2"> Please enter it here.</p>
+              <p data-i18n="authen_2fa_body2"> Please enter it here.</p>
             </div>
             <div class="d-flex justify-content-between">
               <input type="number" maxlength="1" class="form-control input-box" pattern="[0-9]*" inputmode="numeric" autocomplete="off">
@@ -111,7 +111,7 @@
           </div>
           <div class="d-flex flex-column align-items-center">
             <button type="button" class="font-bs-bold fs-lg btn btn-primary m-2"
-              id="edit-continue" data-i18n="continue">Continue</button>
+              id="edit-continue" data-i18n="continuing">Continue</button>
             <button type="button" class="font-bs-bold fs-lg btn btn-primary m-2"
               id="edit-resend-code" data-i18n="resend_code">Resend code</button>
           </div>
