--- a/project/frontend/templates/test/index.html
+++ b/project/frontend/templates/test/index.html
@@ -20,7 +20,7 @@
 						</div>
 						<div class="d-flex justify-content-around popup-footer w-100">
 								<button id="modalBackBtn" type="button" class="font-bs fs-lg btn btn-secondary flex-shrink-1 p-2 mx-2"
-									data-i18n="continue" data-bs-dismiss="modal">continue</button>
+									data-i18n="continuing" data-bs-dismiss="modal">continue</button>
 						</div>
 					</div>
 				</div>
