--- a/project/frontend/templates/test/index.html
+++ b/project/frontend/templates/test/index.html
@@ -1,10 +1,10 @@
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<!-- <link rel="stylesheet" type="text/html" href="./style.css"> -->
 <div>
     <h1 style="color: white;">Pong Game</h1>
     <h2>version 0.1.0.0</h2>
     <center>
-    <canvas id="gameArea" width="1024" height="600"></canvas>
+    <canvas id="gameArea" width="1024" height="600" style="display: block;"></canvas>
     </center>
 
 
